tests/fixtures/invalid/int_bitand_bytes.py
# Cannot bitwise AND Int and Bytes
x: int = 1 & b"hello"
